# AWS_Lambda

./: .gitignore  README.md  README_AWS.md  pyproject.toml
movie-script-agno_openai/: README_App.md  app.py  requirements.txt  samconfig.toml  template.yaml  test_direct.py
movie-script-agno_openai/events/: event.json
